--- a/block-BHaabs/assets/stylesheet/style.css
+++ b/block-BHaabs/assets/stylesheet/style.css
@@ -32,8 +32,8 @@ body {
 	line-height:1.5;
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
-	padding: 30px 0;
-	background-color: #2f3640;
+	/* padding: 30px 0; */
+	background-color: #282e2b;
 }
 ol, ul {
 	list-style: none;
@@ -55,9 +55,12 @@ table {
 *::after{
   box-sizing: border-box;
 }
+h1,h2,h3,h4,h5,h6,time{
+	font-family: 'Roboto Slab', serif;
+}
 /* General */
 .container {
-    max-width: 1330px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 32px;
 }
@@ -71,31 +74,37 @@ table {
 {
 	padding: 30px 0;
 }
-/* header  */
-.heading{
+/* article */
+.article-header{
+	padding: 32px 0;
+	color: #f8f8f4;
+}
+.article-header h1{
+	font-size: 56px;
+	text-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+	/* font-family: ; */
+	margin-bottom: 48px;
+	text-transform: capitalize;
+}
+
+.article-header h3{
 	font-size: 32px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	color: red;
 	font-weight: 700;
-	color: #fff;
 }
-.date{
-	display: flex;
-    justify-content: space-around;
-    align-items: center;
-	font-weight: 600;
+.article-header time{
+	font-size: 32px;
 }
-.feb
-{
-	color: #fff;
+p{
+	font-size: 22px;
+	color: #d5d5be;
+	margin-bottom: 16px;
+	list-style: 1.7;
 }
-.strong
-{
-	color: #d63031;
-	word-spacing: 3px;
-}
-.pargraph{
-margin-top: 7px;
-color: #f9ca24;	
+h2{
+	font-size: 48px;
+	color: #ffffff;
+	text-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+	margin-top: 48px;
+	margin-bottom: 16px;
 }
