--- a/block-BHaabt/assets/stylesheet/style.css
+++ b/block-BHaabt/assets/stylesheet/style.css
@@ -75,12 +75,13 @@ h1,h2,h3,h4,h5,h6,time{
 }
 /* header */
 .header {
-    padding-top: 10px;
+    padding: 10px 0;
 }
 .brand{
     text-decoration: none;
     font-size: 40px;
     font-weight: 700;
+    color: #34495e;
 }
 .nav{
 
@@ -92,6 +93,7 @@ h1,h2,h3,h4,h5,h6,time{
     font-weight: 700;
     vertical-align: middle;
     text-transform: uppercase;
+    color: #34495e;
 }
 .btn{
     border: 1px solid black;
@@ -117,7 +119,8 @@ hr{
     color: #fff;
     font-size: 50px;
     text-transform: capitalize;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    line-height: 1.3;
 }
 .article1 .text{
     color: #fff;
@@ -260,7 +263,7 @@ hr{
     justify-content: center;
     align-items: center;
     background-color: #2d2640;
-    padding: 15px 0;
+    padding: 30px 0;
 }
 small{
     color: #aaa8b2; 
